# syncfu

./: .gitignore  ARCHITECTURE-COMPARISON.md  CHEATSHEET.md  Cargo.toml  PLAN.md  README.md  index.html  install.ps1  install.sh  package.json  pnpm-lock.yaml  progress.txt  uninstall.ps1  uninstall.sh  vitest.config.ts
.github/workflows/: release-cli.yml  release.yml
claude/: command.md  skill.md
cli/: Cargo.toml  README.md
cli/src/: client.rs  daemon.rs  main.rs  output.rs  types.rs  wait.rs
cli/tests/: integration.rs
core/: Cargo.toml
core/src/: lib.rs  manager.rs  notifier.rs  server.rs  types.rs
desktop/: Cargo.toml  index.html  pnpm-lock.yaml  tauri.conf.json  tsconfig.json  vite.config.ts
desktop/frontend/: main.tsx  test-setup.ts
desktop/frontend/__mocks__/: tauri-plugin-autostart.ts  tauri-plugin-dialog.ts
desktop/frontend/components/overlay/: NotificationIcon.tsx  NotificationOverlay.test.tsx  RelativeTime.tsx
desktop/frontend/hooks/: useNotifications.test.ts
desktop/frontend/stores/: notificationStore.ts
desktop/frontend/styles/: animations.css  globals.css
desktop/src-tauri/: lib.rs
desktop/src-tauri/overlay/: panel.rs
desktop/src-tauri/tray/: menu.rs
docs/: Local-Review-install-scripts.md
scripts/: fire.py
src/: App.test.tsx  App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/notification/: manager.rs  types.rs
src-tauri/src/overlay/: panel.rs
src-tauri/src/server/: http.rs  mod.rs  waiters.rs  webhook.rs
src-tauri/src/tray/: menu.rs
src/__mocks__/: tauri-api.ts
src/components/app/: HistoryView.test.tsx  HistoryView.tsx  MainApp.tsx
src/components/overlay/: NotificationCard.test.tsx  NotificationCard.tsx  NotificationIcon.tsx  NotificationOverlay.test.tsx  NotificationOverlay.tsx
src/hooks/: useGoogleFont.ts  useNotifications.ts
src/stores/: historyStore.test.ts  historyStore.ts  notificationStore.test.ts
src/styles/: app.css  globals.css  overlay.css
src/types/: notification.ts
