[package]
name = "syncfu-cli"
version = "0.2.0"
edition = "2021"
description = "CLI for syncfu — send notifications from anywhere"
license = "MIT"

[[bin]]
name = "syncfu"
path = "src/main.rs"

[dependencies]
syncfu-core = { path = "../core" }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
anyhow = "1"
futures = "0.3"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros", "test-util"] }
