[package]
name = "syncfu"
version = "0.1.0"
edition = "2021"
description = "Universal overlay notification system for AI agents and background processes"
license = "MIT"

[lib]
name = "syncfu_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "syncfu"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
